base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: devsecops-ingress
  namespace: devsecops

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: users-service
                port:
                  number: 8000

          - path: /items
            pathType: Prefix
            backend:
              service:
                name: inventory-service
                port:
                  number: 8000

          - path: /inventory
            pathType: Prefix
            backend:
              service:
                name: inventory-service
                port:
                  number: 8000

          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: orders-service
                port:
                  number: 8000
